src/tests/fixtures/field_values/ArrayOfPromises.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  b: Promise<string>[];
  /** @gqlField */
  c: Array<Promise<string>>;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/ArrayOfPromises.invalid.ts:4:6 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with a `/** @gql */` tag such as `/** @gqlType */` or `/** @gqlInput **/`?

4   b: Promise<string>[];
       ~~~~~~~~~~~~~~~
src/tests/fixtures/field_values/ArrayOfPromises.invalid.ts:6:12 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with a `/** @gql */` tag such as `/** @gqlType */` or `/** @gqlInput **/`?

6   c: Array<Promise<string>>;
             ~~~~~~~~~~~~~~~
